--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -9,7 +9,7 @@ markdown: redcarpet
 
 excerpt_separator: <!-- more -->
 
-title : balabalabala
+title : ...bulabula...
 tagline: OpenCV OpenCL 
 author : 
   name : 致自己
