--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -15,6 +15,7 @@ author :
   name : 致自己
   email : wchunx416@126.com
   github : https://github.com/wchunx
+  zhihu : http://www.zhihu.com/people/fang-xiao-yi-57
   weibo : http://weibo.com/u/2935771412
   qq : 903309521
 # The production_url is only used when full-domain names are needed
